# robot-toolkit

./: .gitignore  .pre-commit-config.yaml  BUG_ANALYSIS.md  BUG_FIX_COMPLETE.md  CI_QUEUE_ANALYSIS.md  LICENSE  MANIFEST.in  PHASE15B_REPORT.md  README.md  ROADMAP.md  benchmark.py  debug_pendulum.py  ik_fast.cpp  ik_fast_wrapper.py  ik_solver.py  pyproject.toml  requirements-dev.txt  robot_dyn.py  robot_dyn_fast.cpp  setup.py  solve_ik_example.py  test_collision.py  test_dyn.py  test_ik.py  test_path_planning.py  test_trajectory.py  urdf_parser.py  visualize.py
.github/workflows/: build-wheels.yml  ci.yml
docs/: MAC_MINI_SETUP_GUIDE.md  PHASE_A_QUICK_REF.md  PHASE_A_SELF_HOSTED_RUNNER.md  README.md  RELEASE.md  applications.md  architecture.md  benchmark.md  build-and-test.md  challenges.md  contributing.md  design-philosophy.md  phase15b-completion.md  scientific-principles.md  tutorial-examples.md
docs/plans/: 2026-05-14-phase-b-meshcat-design.md  2026-05-14-scope-roadmap-review.md
docs/scripts/: mac_mini_runner_setup.sh
examples/: solve_ik.py  tutorial_ik.ipynb
examples/tutorials/: README.md  check_syntax.sh  tutorial01_workspace_analysis.py  tutorial02_collision_detection.py  tutorial03_coordinated_trajectory.py  tutorial04_path_planning.py
robot_ik/: __init__.py  collision.py  ik_fast_wrapper.py  ik_solver.py  path_planning.py  robot_dyn.py  trajectory.py  urdf_parser.py  visualize.py
ros2/: README.md  package.xml
