[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow gradual typing

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[project]
name = "robot-ik"
version = "0.2.0"
description = "Fast 6-DOF Inverse Kinematics and Rigid Body Dynamics (C++ accelerated)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Danny Zeng", email = "danny@zeng.ai"}
]
keywords = ["robotics", "inverse kinematics", "dynamics", "manipulator", "6-DOF"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7.0"]
dev = ["pytest>=7.0", "pytest-cov", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/dz3ai/robot-toolkit"
Repository = "https://github.com/dz3ai/robot-toolkit"
Documentation = "https://github.com/dz3ai/robot-toolkit/blob/main/README.md"
Issues = "https://github.com/dz3ai/robot-toolkit/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

